--- a/HTML/exercise.html
+++ b/HTML/exercise.html
@@ -8,18 +8,26 @@
                 border: 1px solid black;
                 border-collapse: collapse;
             }
+
+            .header {
+                background-color: rgb(207, 206, 206);
+            }
+
+            .row-highlight {
+                background-color: rgb(239, 236, 236);
+            }
         </style>
     </head>
 
     <body>
         <table style="width:100%;">
             <thead>
-                <tr>
-                    <th colspan="4" style="background-color: rgb(207, 206, 206);"><strong>A complex table</strong></th>
+                <tr class="header">
+                    <th colspan="4"><strong>A complex table</strong></th>
                 </tr>
             </thead>
             <tbody>
-                <tr style="background-color: rgb(239, 236, 236);">
+                <tr class="row-highlight">
                     <td colspan="2"><strong>Invoice #123456789</strong></td>
                     <td colspan="2"><strong>14 January 2025</strong></td>
                 </tr>
@@ -39,7 +47,7 @@
                         </address>
                     </td>
                 </tr>
-                <tr style="background-color: rgb(239, 236, 236);">
+                <tr class="row-highlight">
                     <td><strong>Name/Description</strong></td>
                     <td><strong>Qty.</strong></td>
                     <td><strong>@</strong></td>
@@ -58,18 +66,18 @@
                     <td>100.00</td>
                 </tr>
                 <tr>
-                    <td colspan="3" style="background-color: rgb(239, 236, 236);"><strong>Subtotal</strong></td>
+                    <td colspan="3" class="row-highlight"><strong>Subtotal</strong></td>
                     <td>110.00</td>
                 </tr>
                 <tr>
-                    <td colspan="2" style="background-color: rgb(239, 236, 236);"><strong>Tax</strong></td>
+                    <td colspan="2" class="row-highlight"><strong>Tax</strong></td>
                     <td>8%</td>
                     <td>8.80</td>
                 </tr>
             </tbody>
             <tfoot>
                 <tr>
-                    <td colspan="3" style="background-color: rgb(239, 236, 236);"><strong>Grand Total</strong></td>
+                    <td colspan="3" class="row-highlight"><strong>Grand Total</strong></td>
                     <td>$118.80</td>
                 </tr>
             </tfoot>
