--- a/HTML/pattern.html
+++ b/HTML/pattern.html
@@ -17,49 +17,49 @@
             .triangle1 {
                 width: 0;
                 height: 0;
-                border-top: 65px solid red;
-                border-left: 130px solid #e600e6;
-                border-bottom: 65px solid #ffd11a;
+                border-top: 67px solid red;
+                border-left: 134px solid #e600e6;
+                border-bottom: 67px solid #ffd11a;
             }
             
             .triangle2 {
                 width: 0;
                 height: 0;
-                border-top: 65px solid #ffd11a;
-                border-left: 130px solid lightblue;
-                border-bottom: 65px solid #06ac96;
+                border-top: 67px solid #ffd11a;
+                border-left: 134px solid lightblue;
+                border-bottom: 67px solid #06ac96;
             }
 
             .triangle3 {
                 width: 0;
                 height: 0;
-                border-top: 65px solid #06ac96;
-                border-left: 130px solid yellow;
-                border-bottom: 65px solid red;
+                border-top: 67px solid #06ac96;
+                border-left: 134px solid yellow;
+                border-bottom: 67px solid red;
             }
 
             .triangle4 {
                 width: 0;
                 height: 0;
-                border-top: 65px solid lightblue;
-                border-right: 130px solid #06ac96;
-                border-bottom: 65px solid yellow;
+                border-top: 67px solid lightblue;
+                border-right: 134px solid #06ac96;
+                border-bottom: 67px solid yellow;
             }
             
             .triangle5 {
                 width: 0;
                 height: 0;
-                border-top: 65px solid yellow;
-                border-right: 130px solid red;
-                border-bottom: 65px solid #e600e6;
+                border-top: 67px solid yellow;
+                border-right: 134px solid red;
+                border-bottom: 67px solid #e600e6;
             }
 
             .triangle6 {
                 width: 0;
                 height: 0;
-                border-top: 65px solid #e600e6;
-                border-right: 130px solid #ffd11a;
-                border-bottom: 65px solid lightblue;
+                border-top: 67px solid #e600e6;
+                border-right: 134px solid #ffd11a;
+                border-bottom: 67px solid lightblue;
             }
         </style>
     </head>
@@ -101,6 +101,24 @@
                 <div class="triangle5"></div>
                 <div class="triangle6"></div>
                 <div class="triangle4"></div>
+            </div>
+            <div>
+                <div class="triangle1"></div>
+                <div class="triangle2"></div>
+                <div class="triangle3"></div>
+                <div class="triangle1"></div>
+            </div>
+            <div>
+                <div class="triangle4"></div>
+                <div class="triangle5"></div>
+                <div class="triangle6"></div>
+                <div class="triangle4"></div>
+            </div>
+            <div>
+                <div class="triangle1"></div>
+                <div class="triangle2"></div>
+                <div class="triangle3"></div>
+                <div class="triangle1"></div>
             </div>
         </div>
     </body>
