--- a/HTML/ShuffleMatrix.html
+++ b/HTML/ShuffleMatrix.html
@@ -99,19 +99,19 @@
     <body>
         <div id="container">
             <div>
-                <div id="box1" style="background-color: red;">1</div>
-                <div id="box2" style="background-color: blue;">2</div>
-                <div id="box3" style="background-color: green;">3</div>
+                <div id="box1" style="background-color: red;"></div>
+                <div id="box2" style="background-color: blue;"></div>
+                <div id="box3" style="background-color: green;"></div>
             </div>
             <div>
-                <div id="box4" style="background-color: blue;">4</div>
-                <div id="box5" style="background-color: green;">5</div>
-                <div id="box6" style="background-color: red;">6</div>
+                <div id="box4" style="background-color: blue;"></div>
+                <div id="box5" style="background-color: green;"></div>
+                <div id="box6" style="background-color: red;"></div>
             </div>
             <div>
-                <div id="box7" style="background-color: green;">7</div>
-                <div id="box8" style="background-color: red;">8</div>
-                <div id="box9" style="background-color: blue;">9</div>
+                <div id="box7" style="background-color: green;"></div>
+                <div id="box8" style="background-color: red;"></div>
+                <div id="box9" style="background-color: blue;"></div>
             </div>   
         </div>
 
